# praxis-operator

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Containerfile  Makefile  README.md  clippy.toml  deny.toml
.github/workflows/: conformance.yaml  integration.yaml  tests.yaml
deploy/: deployment.yaml  gatewayclass.yaml  rbac.yaml
docs/: architecture.md  configuration.md  conventions.md  development.md  getting-started.md  proposals.md
docs/proposals/: template.md
hack/: kind-config.yaml  run-conformance.sh  setup-kind.sh  smoke-test.sh  teardown-kind.sh
src/: context.rs  endpoints.rs  error.rs  main.rs
src/config/: cluster.rs  filter_conversion.rs  generate.rs  listener.rs  mod.rs  routing.rs
src/controller/: gateway.rs  gateway_class.rs  gateway_helpers.rs  httproute.rs  mod.rs
src/gateway_api/: attachment.rs  conditions.rs  hostname.rs  mod.rs  reference_grant.rs
src/resources/: configmap.rs  deployment.rs  labels.rs  mod.rs  service.rs
tests/: integration.rs
